# metodos-tp2

./: .gitignore  CMakeLists.txt  Model.cpp  Model.h  imageloader.m  inutils.cpp  main.cpp  methods.cpp  methods.h  octave-workspace  primer-autovector.ppm  test.csv  test_test.csv  test_test_red.csv  test_train.csv  test_train_red.csv  utils.cpp  utils.h
archivos_tp2/ppmloader/: main.cpp
experimentacion/: Laboratorio.ipynb  Untitled.ipynb
experimentacion/.ipynb_checkpoints/: Laboratorio-checkpoint.ipynb  Untitled-checkpoint.ipynb
experimentacion/data/: jajaj.txt  metrics-0-knn.csv  metrics-0.csv  metrics-1-knn.csv  metrics-1.csv  metrics-2-knn.csv  metrics-2.csv  metrics-3-knn.csv  metrics-3.csv  metrics-4-knn.csv  metrics-4.csv  metrics.csv  output-0-knn.csv  output-0.csv  output-1-knn.csv  output-1.csv  output-2-knn.csv  output-2.csv  output-3-knn.csv  output-3.csv  output-4-knn.csv  output-4.csv  output.csv  results-0.csv  results-1.csv  results-2.csv  results-3.csv  results-4.csv  results.csv  small-1-metrics-0.csv  small-1-metrics-1.csv  small-1-metrics-2.csv  small-1-metrics-3.csv  small-1-metrics-4.csv  small-1-output-0.csv  small-1-output-1.csv  small-1-output-2.csv  small-1-output-3.csv  small-1-output-4.csv  small-2-metrics-0.csv  (+66 more)
experimentacion/testing/: testing-fold-0.txt  testing-fold-1.txt  testing-fold-2.txt  testing-fold-3.txt  testing-fold-4.txt
experimentacion/training/: small-1-training-fold-0.txt  small-1-training-fold-1.txt  (+37 more)
ppmloader/: ppmloader.cpp  ppmloader.h
tests/: README.txt  testFullBig.in  testFullRed.in  testRed.in
(+5 files in other folders)
